--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.86.2",
     "ai": "^3.4.0",
+    "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "openai": "^4.55.0",
     "react": "19.2.0",
